--- a/doc/document.tex
+++ b/doc/document.tex
@@ -52,6 +52,8 @@
 \usepackage[font={small}]{caption}
 \usepackage[font={footnotesize}]{subcaption}
 
+%\usepackage{showframe}
+
 \usepackage{algpseudocode}
 \usepackage{algorithmicx}
 \usepackage{algorithm}
@@ -60,7 +62,7 @@
 \renewcommand{\algorithmicensure}{\textbf{Ausgabe:}}
 \floatname{algorithm}{Algorithmus}
 
-\usepackage{todonotes}
+\usepackage[disable]{todonotes}
 
 \usepackage{user}
 
