--- a/doc/literature.bib
+++ b/doc/literature.bib
@@ -75,6 +75,7 @@
   year      = {1986},
   month     = sep,
   number    = {4},
+  volume    = {17},
   pages     = {326--337}
 }
 
@@ -218,6 +219,7 @@
 
 @misc{Cometitrack2011,
   author    = {Cometitrack},
+  year      = {2011},
   url       = {http://www.competitrack.com/nhpub/2dcodes/index.html}
 }
 @book{Furht2011,
