--- a/doc/tex/appendix.tex
+++ b/doc/tex/appendix.tex
@@ -1,5 +1,6 @@
 \begin{appendix}
 \input{tex/appendix/proof-division}
 \input{tex/appendix/xml-schema}
-\input{tex/appendix/uml}
+%\input{tex/appendix/uml}
 \end{appendix}
+
