--- a/doc/tex/barcodes/thecodes/qr.tex
+++ b/doc/tex/barcodes/thecodes/qr.tex
@@ -1,6 +1,6 @@
 \subsection*{QR-Code}
 %Herkunft und Nutzung
-Der QR-Code wurde 1994 von der japanischen Firma Denso Wave inc., einer Tochterfirma von Toyota, als 'Quick Response Code' entwickelt. Ein Code kann maximal 7089 Ziffern bzw. 4296 Zeichen+Ziffern verschlüsseln und besitzt eine hohe Fehlerkorrekturrate von bis zu 30 \%. Er wird inzwischen in allen Bereichen des täglichen Lebens genutzt, was z.B. auch eine Studie aus dem August 2006 in Japan belegt, wo 82.4\% der zufällig Befragten ihre Handys dafür nutzten QR-Codes zu lesen.~\cite{Furht2011})
+Der QR-Code wurde 1994 von der japanischen Firma Denso Wave inc., einer Tochterfirma von Toyota, als 'Quick Response Code' entwickelt. Ein Code kann maximal 7089 Ziffern bzw. 4296 Zeichen+Ziffern verschlüsseln und besitzt eine hohe Fehlerkorrekturrate von bis zu 30 \%. Er wird inzwischen in allen Bereichen des täglichen Lebens genutzt, was z.B. auch eine Studie aus dem August 2006 in Japan belegt, wo 82.4\% der zufällig Befragten ihre Handys dafür nutzten QR-Codes zu lesen.~\cite{Furht2011}
 
 %Aufbau
 Ein QR-Code besteht aus 5 verschiedenen Bereichen: dem Suchraster, dem Ausrichtungsraster, dem Kalibrierungsraster, der Ruhezone und dem Datenbereich. Das Suchraster besteht aus 3 Quadraten, durch die man die Position, den Drehwinkel und die Größe des Codes ermitteln kann. Das Ausrichtungsraster, ab Version 2, hilft beim Ausgleich von nicht-linearen Verzerrungen. Alle Datensymbole können mit Hilfe des Kalibrierungsraster's gefunden werden. Die Ruhezone, die den Code umgibt, ist für das Finden des Codes, z.B innerhalb eines Bildes, unbedingt nötig und im Datenbereich befinden sich jegliche Daten, die als quadratische Matrix gespeichert werden. Die Codes existieren in 40 verschiedenen Versionen, die die Größe der Matrix festlegen (von 21x21 bis 177x177 Pixel).
