--- a/doc/tex/classes/extractor/grayscaler.tex
+++ b/doc/tex/classes/extractor/grayscaler.tex
@@ -1,4 +1,4 @@
-\subsection{Interface \code{Grayscaler}}
+\subsection*{Interface \code{Grayscaler}}
 Der \code{Grayscaler} berechnen das Grauwertbild eines Bildes.
 Aus Performancegründen setzt die Implementierung \code{DefaultGrayscaler} keines der in \autoref{sec:grayscale} vorgestellten Verfahren um.
 Stattdessen wird das Eingabebild in das, nur einen Farbkanal besitzenden, Ausgabebild gezeichnet\footnote{\href{http://docs.oracle.com/javase/6/docs/api/java/awt/Graphics2D.html\#drawImage(java.awt.image.BufferedImage, java.awt.image.BufferedImageOp, int, int)}{java.awt.Graphics2D\#drawImage()}}.
