--- a/doc/tex/classes/extractor/regionextractor.tex
+++ b/doc/tex/classes/extractor/regionextractor.tex
@@ -1,4 +1,4 @@
-\subsection{Interface \code{RegionExtractor}}
+\subsection*{Interface \code{RegionExtractor}}
 Implementationen von \code{RegionExtractor} dienen dem Auffinden von Regionen in einem Bild.
 Mit \code{DefaultRegionExtractor} ist das in \autoref{sec:candidate-extraction} beschriebene Verfahren realisiert 
 \elasticfigure{img/uml/uml.146}{Klassendiagramm von \code{DefaultRegionExtractor}}
