--- a/doc/tex/classes/usedlibraries.tex
+++ b/doc/tex/classes/usedlibraries.tex
@@ -1,18 +1,14 @@
 \section{Externe Bibliotheken}
-In diesem Bereich werden die Bibliotheken kurz vorgestellt, deren Funktionen für die Strichcodeerkennung und -verbesserung wichtig sind.
+%In diesem Bereich werden die Bibliotheken kurz vorgestellt, deren Funktionen für die Strichcodeerkennung und -verbesserung wichtig sind.
+Die Implementierung verwendet diverse Bilbiotheken, die im folgenden kurz aufgeführt sind.
 
+\paragraph{ImageJ}
+ImageJ\footnote{\url{http://rsbweb.nih.gov/ij/}} ist ein gemeinfreies (public domain) Bildbearbeitungsprogramm, dessen Bibliotheken ebenfalls frei nutzbar sind.
+Viele der Bildverbesserungsfunktionen des Programmes greifen auf Funktionen aus ImageJ zurück.
 
 \subsection*{ZXing}
 Wie bereits in Kapitel \ref{par:zxing} beschrieben, ist diese Bibliothek für das Decodieren der Strichcodes verantwortlich.
 
+%\paragraph{ZXing}
+%ZXing ist bereits in \autoref{sec:barcodelibs} beschrieben, ist diese Bibliothek für das Lesen der Strichcodes verantwortlich.
 
-\subsection*{BoovCV}
-
-
-
-\subsection*{ImageJ}
-ImageJ ist ein offenes Bildbearbeitungsprogramm, dessen Bibliotheken offen nutzbar sind (Public Domain). Viele der Bildverbesserungsfunktionen des Programmes greifen auf Funktionen aus ImageJ zurück.
-
-
-
-\subsection*{JavaCV}
