--- a/doc/tex/title.tex
+++ b/doc/tex/title.tex
@@ -72,16 +72,16 @@
 
 \cleardoubleemptypage
 \pagenumbering{roman}
-%\pdfbookmark{Inhaltsverzeichnis}{Inhaltsverzeichnis}
+\pdfbookmark{Inhaltsverzeichnis}{Inhaltsverzeichnis}
 \tableofcontents
 
 \cleardoublepage
 \markboth{Abbildungsverzeichnis}{Abbildungsverzeichnis}
 \listoffigures
 
-\cleardoublepage
-\markboth{Tabellenverzeichnis}{Tabellenverzeichnis}
-\listoftables
+%\cleardoublepage
+%\markboth{Tabellenverzeichnis}{Tabellenverzeichnis}
+%\listoftables
 
 %\renewcommand{\listalgorithmname}{Algorithmenverzeichnis}
 %\cleardoublepage
@@ -97,3 +97,4 @@
 \cleardoublepage
 \pagenumbering{arabic}
 \setcounter{page}{1}
+
