--- a/doc/tex/classes/extractor/barcodereader.tex
+++ b/doc/tex/classes/extractor/barcodereader.tex
@@ -1,4 +1,4 @@
-\subsection{Interface \code{BarcodeReader}}
+\subsection*{Interface \code{BarcodeReader}}
 Die Funktion eines \code{BarcodeReader} liegt im Lesen von Barcodes in einem Bild.
 Die Implementierung \code{DefaultBarcodeReader} verwendet ZXing~(siehe \autoref{par:zxing}) zum Dekodieren der Barcodes.
 %\elasticfigure{img/uml/uml.147}{Klassendiagramm von \code{DefaultBarcodeReader}}
